<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Edt_form_driver">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="14dp"
                android:layout_marginLeft="15dp"
                android:padding="20dp"/>

            <TextView
                android:id="@+id/edtName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#00000000"
                android:editable="false"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="16dp"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#ACACAC"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hp"
                android:textSize="14dp"
                android:layout_marginLeft="15dp"
                android:padding="20dp"/>

            <TextView
                android:id="@+id/edtPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#00000000"
                android:editable="false"
                android:hint="@string/hp"
                android:inputType="text"
                android:padding="16dp"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#ACACAC"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saldo"
                android:textSize="14dp"
                android:layout_marginLeft="15dp"
                android:padding="20dp"/>

            <TextView
                android:id="@+id/edtSaldo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#00000000"
                android:hint="@string/saldo"
                android:padding="16dp"
                android:textSize="14sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rp"
                android:textSize="14dp"
                android:layout_marginLeft="15dp"
                android:padding="20dp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#ACACAC"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point"
                android:textSize="14dp"
                android:layout_marginLeft="15dp"
                android:padding="20dp"/>

            <TextView
                android:id="@+id/edtPoint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#00000000"
                android:hint="@string/point"
                android:padding="16dp"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#ACACAC"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="14dp"
                android:layout_marginLeft="15dp"
                android:padding="20dp"/>


            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/pilih"
                android:entries="@array/status_driver"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#ACACAC"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_SaveDriver"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="125dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/save"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#ACACAC"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>