<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".form_biaya_driver">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bonus_saldo"
                android:textSize="14dp"
                android:layout_marginLeft="15dp"
                android:padding="20dp"/>
            <EditText
                android:id="@+id/edtSaldoDriver"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#00000000"
                android:hint="@string/bonus_saldo"
                android:inputType="number"
                android:padding="16dp"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rp"
                android:textSize="14dp"
                android:layout_marginLeft="15dp"
                android:padding="20dp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#ACACAC"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bonus_point"
                android:textSize="14dp"
                android:layout_marginLeft="15dp"
                android:padding="20dp"/>
            <EditText
                android:id="@+id/edtPointDriver"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#00000000"
                android:hint="@string/bonus_point"
                android:inputType="number"
                android:padding="16dp"
                android:textSize="14sp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#ACACAC"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jarak"
                android:textSize="14dp"
                android:layout_marginLeft="15dp"
                android:padding="20dp"/>
            <EditText
                android:id="@+id/edtBiayaJarak"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#00000000"
                android:hint="@string/bonus_point"
                android:inputType="number"
                android:padding="16dp"
                android:textSize="14sp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#ACACAC"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_SaveDriver"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="125dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/save"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#ACACAC"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>